scribble/scribble-assertions/src/test/resources/bad/extensions/assrtcore/syntax/disamb/statevar/AssrtCoreTest21.scr
module bad.extensions.assrtcore.safety.assrtprog.statevar.AssrtCoreTest21;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role B, role S)
{
	ok() from B to S;
	do Proto2(B, S); @"<Quote>"  // TODO FIXME: disamb, unknown name -- disamb (getInlined?) should throw ScribbleException
}

aux global protocol Proto2(role B, role S) @"<x:=0>" 
{
	5() from B to S;	@"(False)"
}
//*/
